[project]
name = "IndieWeb"
version = "1.0.0"
description = "A Python module that uses indieweb technologies to show content, fallbacks to alternatives"
readme = "README.md"
license = {text = "LGPL-2.1"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "islekcaganmert@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: LGPL-2.1 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.9"
dependencies = ["requests"]

[project.urls]
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Documentation = "https://github.com/islekcaganmert/indieweb"
Changes = "https://github.com/islekcaganmert/indieweb/commits/master"
"Source Code" = "https://github.com/islekcaganmert/indieweb"
"Issue Tracker" = "https://github.com/islekcaganmert/indieweb/issues"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"